Changed the version for master for ssh auth

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,7 +72,9 @@ jobs:
 
       - name: Pull latest code and restart app on EC2
         run: |
+          # Allow git to work with the directory safely
           ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
             cd /home/ubuntu/HNGProjects/fastapi-book-project
             git pull origin main
             docker-compose down
