--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,22 @@
-version: "3.9"
+version: "3.8"
 
 services:
   fastapi:
     build: .
     container_name: fastapi_app
-    ports:
-      - "8000:8000"
+    expose:
+      - 8000
 
   nginx:
-    image: nginx:latest
+    restart: always
+    image: nginx:1.23-alpine
     container_name: nginx_proxy
     ports:
       - "80:80"
     volumes:
-      - ./default.conf:/etc/nginx/default.conf
+      - ./default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - fastapi
+
+volumes:
+    static_volume: { }
