--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,15 +1,19 @@
 name: CI/CD Pipeline for FastAPI Application
 
 on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+    branches:
+      - main  # Run tests only on PRs targeting main
+
   push:
     branches:
-      - main # Trigger on push to the main branch
-  pull_request:
-    branches:
-      - main # Trigger on PRs to the main branch
+      - main  # Trigger deployment only when PR is merged into main
 
 jobs:
-  # Job 1: Test
+  # This job runs tests when a PR is opened or updated
   test:
     runs-on: ubuntu-latest
     steps:
@@ -28,7 +32,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.12  # Project Python version
+          python-version: 3.12
 
       - name: Install Dependencies
         run: |
@@ -39,28 +43,30 @@ jobs:
         run: |
           pytest  # Run your tests, adjust if needed for your test framework
 
-  # Job 2: Deploy to server
+  # This job runs and deploys code only when PR is merged into main
   deploy:
-    runs-on: ubuntu-latest
-    needs: test  # Deploy only runs after the tests are successful
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+    if_merged:
+      if: github.event.pull_request.merged == true
+      runs-on: ubuntu-latest
+      needs: test  # Deploy only runs after the tests are successful
+      steps:
+        - name: Checkout Code
+          uses: actions/checkout@v2
 
-      - name: Set up SSH key for EC2 access
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+        - name: Set up SSH key for EC2 access
+          run: |
+            mkdir -p ~/.ssh
+            echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Pull latest code and restart app on EC2
-        run: |
-          # Allow git to work with the directory safely
-          ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
-            cd /home/ubuntu/HNGProjects/fastapi-book-project
-            git pull origin main
-            docker-compose down
-            docker-compose up -d
-          EOF
+        - name: Pull latest code and restart app on EC2
+          run: |
+            # Allow git to work with the directory safely
+            ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+              git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
+              cd /home/ubuntu/HNGProjects/fastapi-book-project
+              git pull origin main
+              docker-compose down
+              docker-compose up -d
+            EOF
