--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,28 +45,27 @@ jobs:
 
   # This job runs and deploys code only when PR is merged into main
   deploy:
-    if_merged:
-      if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
-      needs: test  # Deploy only runs after the tests are successful
-      steps:
-        - name: Checkout Code
-          uses: actions/checkout@v2
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'  # Ensures deployment runs only when a PR is merged
+    needs: test  # Deploy only runs after the tests are successful
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-        - name: Set up SSH key for EC2 access
-          run: |
-            mkdir -p ~/.ssh
-            echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      - name: Set up SSH key for EC2 access
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-        - name: Pull latest code and restart app on EC2
-          run: |
-            # Allow git to work with the directory safely
-            ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-              git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
-              cd /home/ubuntu/HNGProjects/fastapi-book-project
-              git pull origin main
-              docker-compose down
-              docker-compose up -d
-            EOF
+      - name: Pull latest code and restart app on EC2
+        run: |
+          # Allow git to work with the directory safely
+          ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
+            cd /home/ubuntu/HNGProjects/fastapi-book-project
+            git pull origin main
+            docker-compose down
+            docker-compose up -d
+          EOF
