--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    needs: test  # Deploy only runs after the tests are successful
+    if: github.event.pull_request.merged == true  # Ensures it only runs when PR is merged
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
@@ -24,11 +24,11 @@ jobs:
 
       - name: Pull latest code and restart app on EC2
         run: |
-          # Allow git to work with the directory safely
-          ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd /home/ubuntu/HNGProjects/fastapi-book-project
+            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
             git pull origin main
             docker-compose down
-            docker-compose up -d
+            docker-compose up -d --build
           EOF
+
