--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,5 @@ jobs:
 
       - name: Run Tests
         run: |
-          pytest  # Run your tests, adjust if needed for your test framework
+          pytest tests/ --exitfirst --disable-warnings
 
