Add autom-merge on test pass

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,3 +39,14 @@ jobs:
         run: |
           pytest tests/ --exitfirst --disable-warnings
 
+  auto-merge:
+    needs: test  # Only run if tests pass
+    runs-on: ubuntu-latest
+    steps:
+      - name: Auto-Merge PR
+        uses: pascalgn/automerge-action@v0.15.6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          merge-method: merge
+          required-status-checks: "test"  # Only merge if tests pass
+
