--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
 
   automerge:
     runs-on: ubuntu-latest
-    needs: tests  # Ensures automerge only runs if 'tests' job passes
+    needs: test  # Ensures automerge only runs if 'tests' job passes
     if: success() # Only runs if all previous jobs (tests) succeed
     permissions:
       contents: write
@@ -73,4 +73,4 @@ jobs:
         with:
           merge-method: merge  # Options: 'merge', 'squash', 'rebase'
           labels: "automerge"  # Ensures PR has this label before merging
-          required-status-checks: "tests"  # Ensures 'tests' job passed before merging
+          required-status-checks: "test"  # Ensures 'tests' job passed before merging
