--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,18 +39,6 @@ jobs:
         run: |
           pytest tests/ --exitfirst --disable-warnings
 
-#  automerge:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: write
-#      pull-requests: write
-#    steps:
-#      - id: automerge
-#        name: automerge
-#        uses: "pascalgn/automerge-action@v0.16.4"
-#        env:
-#          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-
   automerge:
     runs-on: ubuntu-latest
     needs: test  # Ensures automerge only runs if 'tests' job passes
@@ -74,3 +62,27 @@ jobs:
           merge-method: merge  # Options: 'merge', 'squash', 'rebase'
           labels: "automerge"  # Ensures PR has this label before merging
           required-status-checks: "test"  # Ensures 'tests' job passed before merging
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: automerge  # ✅ Ensures it runs only after PR is merged
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up SSH key for EC2 access
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Pull latest code and restart app on EC2
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            cd /home/ubuntu/HNGProjects/fastapi-book-project
+            git config --global --add safe.directory /home/ubuntu/HNGProjects/fastapi-book-project
+            git pull origin main
+            docker-compose down
+            docker-compose up -d --build
+          EOF
